--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1> I am Fati </h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>My name is Fati</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
