--- a/index.html
+++ b/index.html
@@ -2,11 +2,80 @@
 <html>
 <head>
 <title>Page Title</title>
+<style>
+h1, h2, p {
+    text-align: center;
+    color: black;
+  }
+  ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+</style>
+
 </head>
 <body>
 
-<h1>My name is Fati</h1>
-<p>This is a paragraph.</p>
+<ul>
+    <li><a href="#Getting Started">Getting started</a></li>
+    <li><a href="#How we roll at Pargo">How we roll at Pargo</a></li>
+    <li><a href="#How to guides">How to guides</a></li>
+    <li><a href="#Ways of working">Ways of working</a></li>
+    <li><a href="#Get to know the team">Get to know the team</a></li>
+    <li><a href="#All things office">All things office</a></li>
+  </ul>
+
+  <p>This is another paragraph.</p>
+  <h1 style="font-size:50px;">PARGO_101</h1>
+  <h2 style="font-size:30px;">Welcome to !</h2>
+  <h3>Smallest heading</h3>
+  <p>This is a paragraph.</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+  <div id="All things office">
+    <h1>All things office</h1>
+</div>
 
 </body>
 </html>
