--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="Styles/w3.css">
+<style>
+  html {
+    scroll-behavior: smooth;
+  }
+</style>
 </head>
 <body>
 
@@ -181,6 +186,8 @@
     </p>
     <p>> <a href="https://people.pargo.co.za/#/" title="The Pargo People App" target="_blank" class="w3-hover-text-yellow">The Pargo People App</a></p>
     <p>> <a href="https://pargo.co.za/about-us/team/" title="The Pargo Family" target="_blank" class="w3-hover-text-yellow">The Pargo Family</a></p>
+<iframe src=“https://pargo.co.za/about-us/team/” title=“Pargo Team” width=“800” height=“800“>
+</iframe>
 
   <!-- Contact Section -->
   <div class="w3-container w3-padding-32" id="Contact">
