--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <p> > How to be a Pargo Social Media Ambassador </p>
   </div>
 
-  <div class="w3-container w3-padding-32" id="The Team">
+  <div class="w3-container w3-padding-32" id="The team">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">The team</h3>
    
   </h3>We are a people led company and expect everyone to know everyones names in the team. </h3>
@@ -186,8 +186,9 @@
     </p>
     <p>> <a href="https://people.pargo.co.za/#/" title="The Pargo People App" target="_blank" class="w3-hover-text-yellow">The Pargo People App</a></p>
     <p>> <a href="https://pargo.co.za/about-us/team/" title="The Pargo Family" target="_blank" class="w3-hover-text-yellow">The Pargo Family</a></p>
-<iframe src=“https://pargo.co.za/about-us/team/ title=“Pargo Team” width=“800” height=“800“>
+<iframe src="https://pargo.co.za/about-us/team/" title=“Pargo Team” width=“600” height=“400“>
 </iframe>
+</div>
 
   <!-- Contact Section -->
   <div class="w3-container w3-padding-32" id="Contact">
