--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </p>
     <p>> <a href="https://people.pargo.co.za/#/" title="The Pargo People App" target="_blank" class="w3-hover-text-yellow">The Pargo People App</a></p>
     <p>> <a href="https://pargo.co.za/about-us/team/" title="The Pargo Family" target="_blank" class="w3-hover-text-yellow">The Pargo Family</a></p>
-<iframe src="https://pargo.co.za/about-us/team/" title=“Pargo Team” width=“600” height=“400“>
+<iframe src="https://pargo.co.za/about-us/team/" title="Pargo Team" width="600" height="400">
 </iframe>
 </div>
 
