--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </div>
   <div class="w3-col l3 m6 w3-margin-bottom">
     <div class="w3-display-container">
-      <div class="w3-display-bottomleft w3-black w3-padding">Fun & Games</div>
+      <div class="w3-display-bottomleft w3-black w3-padding">Last-mile Legends</div>
       <img src="/Images/Pargo arrow.jpg" alt="House" style="width:50%">
       <p>Ways of working</p>
     </div>
